[gd_scene load_steps=10 format=2]

[ext_resource path="res://Data/Gegner/ConnectionIIbig.tres" type="DynamicFont" id=1]
[ext_resource path="res://Data/Gegner/ConnectionIImedium.tres" type="DynamicFont" id=2]
[ext_resource path="res://Data/Levels/Menu.gd" type="Script" id=3]
[ext_resource path="res://Data/Hintergrund/Hintergrund.tscn" type="PackedScene" id=4]
[ext_resource path="res://Data/Assets/Background/Hintergrund lvl1.png" type="Texture" id=5]
[ext_resource path="res://Data/Theme.tres" type="Theme" id=6]
[ext_resource path="res://Data/UI/Settings.tres" type="StyleBox" id=7]
[ext_resource path="res://Data/Assets/Musik/ruhig erster versuch .mp3" type="AudioStream" id=8]

[sub_resource type="Theme" id=1]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Node2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 413.93, -127.175 )
scale = Vector2( 6, 3 )

[node name="HintergrundLvl1" type="Sprite" parent="."]
position = Vector2( 1577.14, -38.4694 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 635.573, 580.812 )
current = true

[node name="Rows" type="VBoxContainer" parent="Camera2D"]
margin_left = -463.791
margin_top = -287.788
margin_right = 166.209
margin_bottom = 40.2119
custom_constants/separation = 90
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titel" type="Label" parent="Camera2D/Rows"]
margin_right = 630.0
margin_bottom = 50.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "The Normal Boxing Game"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="Camera2D/Rows"]
margin_top = 140.0
margin_right = 138.0
margin_bottom = 404.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/Rows/CenterContainer"]
margin_right = 138.0
margin_bottom = 264.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Camera2D/Rows/CenterContainer/VBoxContainer"]
margin_right = 138.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Camera2D/Rows/CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 138.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setings" type="Button" parent="Camera2D/Rows/CenterContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 138.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="Quit" type="Button" parent="Camera2D/Rows/CenterContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 138.0
margin_bottom = 264.0
custom_fonts/font = ExtResource( 2 )
text = " Quit "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
margin_left = 129.0
margin_top = 293.023
margin_right = 1129.0
margin_bottom = 893.023
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Popup"]
margin_right = 1000.0
margin_bottom = 550.0
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Popup/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 990.0
margin_bottom = 540.0
theme = ExtResource( 6 )
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Popup/PanelContainer/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 955.0
margin_bottom = 505.0
custom_constants/vseparation = 55
custom_constants/hseparation = 100
columns = 2

[node name="Label" type="Label" parent="Popup/PanelContainer/MarginContainer/GridContainer"]
margin_top = 3.0
margin_right = 225.0
margin_bottom = 33.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Display Mode"

[node name="Display option button" type="OptionButton" parent="Popup/PanelContainer/MarginContainer/GridContainer"]
margin_left = 325.0
margin_right = 930.0
margin_bottom = 36.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
text = "Windows"
align = 2
items = [ "Windows", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Popup/PanelContainer/MarginContainer/GridContainer"]
margin_top = 91.0
margin_right = 225.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 2 )
text = "Master Volume"
valign = 1

[node name="Master Volume" type="HSlider" parent="Popup/PanelContainer/MarginContainer/GridContainer"]
margin_left = 325.0
margin_top = 91.0
margin_right = 930.0
margin_bottom = 121.0
rect_min_size = Vector2( 16, 30 )
size_flags_horizontal = 3
size_flags_vertical = 1
value = 80.0

[node name="Label3" type="Label" parent="Popup/PanelContainer/MarginContainer/GridContainer"]
margin_top = 176.0
margin_right = 225.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 2 )
text = "Musik Volume"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musik Volume" type="HSlider" parent="Popup/PanelContainer/MarginContainer/GridContainer"]
margin_left = 325.0
margin_top = 176.0
margin_right = 930.0
margin_bottom = 206.0
rect_min_size = Vector2( 16, 30 )
size_flags_horizontal = 3
size_flags_vertical = 1
value = 80.0

[node name="Label4" type="Label" parent="Popup/PanelContainer/MarginContainer/GridContainer"]
margin_top = 261.0
margin_right = 225.0
margin_bottom = 291.0
custom_fonts/font = ExtResource( 2 )
text = "SFX Volume"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX Volume" type="HSlider" parent="Popup/PanelContainer/MarginContainer/GridContainer"]
margin_left = 325.0
margin_top = 261.0
margin_right = 930.0
margin_bottom = 291.0
rect_min_size = Vector2( 16, 30 )
size_flags_horizontal = 3
size_flags_vertical = 1
value = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
autoplay = true
bus = "Musik"

[connection signal="pressed" from="Camera2D/Rows/CenterContainer/VBoxContainer/Start" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Camera2D/Rows/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Camera2D/Rows/CenterContainer/VBoxContainer/Setings" to="." method="_on_Setings_pressed"]
[connection signal="pressed" from="Camera2D/Rows/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="item_selected" from="Popup/PanelContainer/MarginContainer/GridContainer/Display option button" to="." method="_on_Display_option_button_item_selected"]
[connection signal="value_changed" from="Popup/PanelContainer/MarginContainer/GridContainer/Master Volume" to="." method="_on_Master_Volume_value_changed"]
[connection signal="value_changed" from="Popup/PanelContainer/MarginContainer/GridContainer/Musik Volume" to="." method="_on_Musik_Volume_value_changed"]
[connection signal="value_changed" from="Popup/PanelContainer/MarginContainer/GridContainer/SFX Volume" to="." method="_on_SFX_Volume_value_changed"]
